tests/paczka1/fuzzy1/83974017.err
Error in line 2: A471 A994 8,9
Error in line 8: b9qiUqd A989 37,4
Error in line 19: aRwPc S742 69,57
Error in line 24: Y5daU S742 45,5
Error in line 27: b9qiUqd S742 212,8
Error in line 28: SpclswUfX A994 63,2
Error in line 36: SpclswUfX A471 66,4
Error in line 39: SpclswUfX S742 7,6
